--- a/template/index.html
+++ b/template/index.html
@@ -440,7 +440,7 @@
             </div>
             <div class="col-lg-6">
               <div class="rounded text-center special-container">
-                <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><img class="rounded" src="images/about-bg-image.png" alt="mvisia-youtube-channel"></a>
+                <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><img class="rounded" src="images/about-bg-image.jpg" alt="mvisia-youtube-channel"></a>
               </div>
             </div>
           </div>
@@ -449,7 +449,7 @@
       <!-- section end -->
 
       <!-- section technology start -->     
-      <section class="dark-translucent-bg tech pv-55 clearfix" style="background-image:url(images/tech-bg-image.png)">
+      <section class="dark-translucent-bg tech pv-55 clearfix" style="background-image:url(images/tech-bg-image.jpg)">
         <div class="container">
           <div class="row row-eq-height">
             <div class="main col-md-12">
@@ -504,7 +504,7 @@
                 <div class="col-sm-3">
                   <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                     <div class="overlay-container border-clear">
-                      <img class="img-container" src="images/case-1.png" alt="">
+                      <img class="img-container" src="images/case-1.jpg" alt="calibradora">
                       <div class="overlay-to-top">
                         <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
                       </div>
@@ -521,7 +521,7 @@
                 <div class="col-sm-3">
                   <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
                     <div class="overlay-container border-clear">
-                      <img class="img-container" src="images/case-2.png" alt="">
+                      <img class="img-container" src="images/case-2.jpg" alt="qualificacao-uvas">
                       <div class="overlay-to-top">
                         <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
                       </div>
@@ -538,7 +538,7 @@
                 <div class="col-sm-3">
                   <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
                     <div class="overlay-container border-clear">
-                        <img class="img-container" src="images/case-3.png" alt="">
+                        <img class="img-container" src="images/case-3.jpg" alt="seletora-eucalipto">
                       <div class="overlay-to-top">
                         <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
                       </div>
@@ -555,7 +555,7 @@
                 <div class="col-sm-3">
                   <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="400">
                     <div class="overlay-container border-clear">
-                        <img class="img-container" src="images/case-4.png" alt="">
+                        <img class="img-container" src="images/case-4.jpg" alt="seletora-flores">
                       <div class="overlay-to-top">
                         <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
                       </div>
@@ -599,7 +599,7 @@
       <!-- section banner call-to-action end -->
 
       <!-- section benefits start -->
-      <section class="dark-translucent-bg pv-30" style="background-image:url(images/benefits-bg-image.png);">
+      <section class="dark-translucent-bg pv-30" style="background-image:url(images/benefits-bg-image.jpg);">
         <div class="container">
           <div class="row justify-content-md-center">
             <div class="col-md-8">
@@ -718,7 +718,7 @@
       <!-- section partners end -->
 
       <!-- section media start -->     
-      <div class="section dark-translucent-bg pv-55 clearfix" style="background-image:url(images/tech-bg-image.png)">
+      <div class="section dark-translucent-bg pv-55 clearfix" style="background-image:url(images/tech-bg-image.jpg)">
         <div class="container">
             <div class="main">
               <h2 class="page-title text-white text-center">Na Mídia</h2>
@@ -731,7 +731,7 @@
                         <div class="col-md-4">
                           <div class="pv-30 phl-40 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                             <a target="_blank" href="https://viewer.aemmobile.adobe.com/index.html#project/69eb211c-a1d3-4b60-a011-6bc2e481431f/view/edicao_380_junho_2017/article/globorural_-dj-de43b365-d42c-49f1-87e2-90d56ec4419d">
-                              <img class="media-logo" src="images/media-1.png">
+                              <img class="media-logo" src="images/media-1.jpg">
                             </a>
                           </div>
                         </div>
