--- a/template/page-tech-inteligencia-artificial.html
+++ b/template/page-tech-inteligencia-artificial.html
@@ -201,7 +201,7 @@
 
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg" style="background-image:url('images/page-tech-3-banner.png'); background-position: 50% 27%;">
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-tech-3-banner.jpg'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
@@ -221,14 +221,13 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6 text-justify mb-20">
-                <p>Olhe para o seu braço por um instante e pense no que acabou de ver. É bem provável que os seus olhos tenham registrado aspectos como a cor, o tamanho e o formato dele. A ausência ou a presença de pelos – assim como a cor destes – provavelmente também foi notada. Talvez uma ou outra veia mais saltada também não tenha passado despercebida aos seus olhos.</p>
-                <p>Todas essas características do seu braço só puderam ser identificadas por você graças à habilidade ocular de interpretar as interações entre a luz e os objetos. Mas há muitas outras informações, propriedades e características do seu braço que passam despercebidas aos olhos. Eles não conseguem enxergar, por exemplo, radiações ultravioletas e infravermelhas e, por isso, muitas informações permanecem invisíveis a eles.</p>
-                <p>Agora, imagine esse mesmo braço sendo observado por uma camêra de tecnologia de ponta, como é o caso de uma câmera hiperespectral. O que poderia ser constatado? A resposta é: quase tudo.</p>
+                <p>Quando ouvimos o termo “inteligência artificial”, normalmente imaginamos civilizações avançadíssimas de robôs inteligentes, carros voadores e sociedades futuristas. Mas deixe de lado por um instante as elaboradas ficções de filmes como “O exterminador do futuro”, “Star Wars” e “Eu, Robô” e pense nos dispositivos e plataformas que você já usa no dia-a-dia.</p>
+                <p>Ao abrir o seu Netflix, os filmes e séries que aparecem em destaque para você não são os mesmos que aparecem para os seus amigos. Ao usar o Facebook, o conteúdo que aparece na sua Página Inicial é baseado nos cliques e likes que você dá em notícias ou publicações de amigos. Quanto mais você ou outras pessoas usam essas plataformas, mais estas <strong>aprendem</strong> sobre as suas preferências e sobre as tendências de diferentes usuários. E é exatamente isso o que caracteriza a inteligência artificial (I.A.): <strong>a capacidade de aprender com base em novas e antigas informações, justamente como nós humanos fazemos</strong>. Basicamente, um sistema inteligente é capaz de ensinar a si mesmo e aprender com as próprias experiências.</p>
               </div>
               <div class="col-lg-6">
                 <div class="special-container">
                   <div class="overlay-container overlay-visible rounded">
-                    <img src="images/page-tech-3-1.png" alt="hiperespectrais-1">
+                    <img src="images/page-tech-3-1.jpg" alt="artificial-1">
                   </div>
                 </div>
               </div>
@@ -241,11 +240,9 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12 text-justify">
-                <p>Uma câmera hiperespectral é tão potente que poderia enxergar em detalhes os padrões das suas veias. Ela poderia até mesmo observar as diferenças na intensidade da coloração da pele, identificando possíveis tumores ou problemas de saúde nela.</p>
-                <p>Isso acontece porque câmeras hiperespectrais conseguem observar e interpretar muito mais informações sobre as interações entre a luz e o seu braço do que os seus olhos ou câmeras comuns. Enquanto olhos e câmeras comuns são capazes apenas de enxergar alguns comprimentos de luz e espectros, câmeras hiperespectrais são dotadas de tecnologia capaz de observar centenas de milhares de espectros de luz de um mesmo objeto ou material. Dessa forma, elas conseguem até mesmo distinguir a composição química dos materiais ou objetos analisados.</p>
-                <p>Essa capacidade visual inigualável das câmeras hiperespectrais traz óbvias vantagens a diversos setores da sociedade – como é o caso do <strong>setor agrícola.</strong></p>
-                <p>Um produtor de tomate que usa a tecnologia hiperespectral consegue identificar a ausência de nutrientes em seus tomates logo no início do processo, sendo possível, assim,  corrigir uma colheita aquém do ideal. Um produtor de eucaliptos que usa máquinas com câmeras hiperespectrais vai conseguir identificar o estado de saúde e a presença de doenças já nas mudas da planta.</p>
-                <p>Ao permitir que o produtor tenha acesso a informações muito mais precisas sobre os seus produtos, a tecnologia hiperespectral antecipa problemas e soluções e garante o aumento da eficiência e da qualidade do produto final.</p>
+                <p>Assim como pessoas, <strong>máquinas e computadores dotados de I.A. retêm informações e ficam cada vez mais inteligentes à medida que o tempo passa</strong>. Este processo de aprendizado é conhecido como <em>machine learning</em>. É possível programar uma máquina para que ela aprenda com suas tentativas e erros: após analisar milhares de exemplos e elaborar diversos algoritmos, o programa entende qual é o algoritmo mais efetivo para cada usuário ou situação. No caso do Netflix e do Facebook, por exemplo, esse tipo de tecnologia permite que a sua experiência nessas plataformas seja cada vez mais personalizada e agradável.</p>
+                <p>Apesar de muito semelhante a alguns dos nossos processos cerebrais, a I.A. apresenta algumas vantagens inegáveis em relação à inteligência humana: diferentemente do que acontece conosco, a inteligência artificial normalmente não sofre com perda de memórias, cansaço mental, excesso de informação, falta de sono e distrações. Ou seja, uma vez desenvolvida, ela pode executar tarefas de alto grau de complexidade e sofisticação (como, por exemplo, dirigir um carro) praticamente de forma ininterrupta. Além disso, usando processos conhecidos como <em>deep learning</em> e “redes neurais” – que imitam a forma como o cérebro humano identifica padrões –  máquinas com I.A. podem acessar bancos de dados gigantescos e encontrar e interpretar informações com muito mais rapidez e eficiência do que nós.</p>
+                <p>Como resultado do desenvolvimento da I.A., diversas áreas da ciência vêm apresentando grandes avanços e setores produtivos vêm obtendo ganhos em eficiência e produtividade. É o caso, por exemplo, do setor agrícola.</p>
               </div>
             </div>
           </div>
@@ -257,7 +254,7 @@
           <div class="container">
             <div class="row">      
               <div class="col-md-12 text-justify mt-10">
-                <p><strong>Aqui na MVISIA, trabalhamos com essa tecnologia de ponta nas nossas máquinas para garantir a maior eficiência possível aos nossos clientes. Quer saber mais sobre como podemos aplicar essa tecnologia ao seu negócio? Sinta-se à vontade para entrar em contato conosco e marcar uma reunião!</strong></p>
+                <p><strong>Aqui na MVISIA, trabalhamos justamente com tecnologias de inteligência artificial para máquinas de agricultura. Com o auxílio das nossas máquinas inteligentes, produtores têm como resultado o aumento de produtividade, a redução de custos, o acompanhamento da produção por meio de relatórios (controle sobre o processo) e, principalmente, os ganhos na qualidade do produto final. Caso tenha interesse em conhecer mais sobre os nossos produtos e tecnologias, sinta-se à vontade para entrar em contato conosco e marcar uma reunião!</strong></p>
               </div>
             </div>
           </div>
@@ -270,7 +267,7 @@
             <h3 class="title-subsection">Veja outras tecnologias</h3>
             <div class="separator-2 mb-30"></div>   
             <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-visao-computacional.html">Visão computacional<i class="fa fa-angle-double-right"></i></a>
-            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-case-tech-inteligencia-artificial.html">Inteligência artificial<i class="fa fa-angle-double-right"></i></a>
+            <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-cameras-hiperespectrais.html">Câmeras hiperespectrais<i class="fa fa-angle-double-right"></i></a>
           </div>
         </div>
       <!-- section others end -->
@@ -280,65 +277,64 @@
     </div>
     <!-- page-wrapper end -->
 
-      <!-- footer start -->
-      <footer id="footer" class="clearfix dark">
-          <div class="footer">
-            <div class="container">
-              <div class="footer-inner">
-                <div class="row justify-content-lg-center">
-                  <div class="col-lg-9">
-                    <div class="footer-content text-center padding-ver-clear">
-                      <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
-                      <p>Máquinas de Visão e Inteligência Artificial</p>
-                      <ul class="list-inline mb-20">
-                        <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
-                      </ul>
-                      <ul class="social-links circle animated-effect-1 margin-clear">
-                        <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
-                        <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
-                        <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
-                      </ul>
-                      <div class="separator"></div>
-                      <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
-                    </div>
+       <!-- footer start -->
+       <footer id="footer" class="clearfix dark">
+        <div class="footer">
+          <div class="container">
+            <div class="footer-inner">
+              <div class="row justify-content-lg-center">
+                <div class="col-lg-9">
+                  <div class="footer-content text-center padding-ver-clear">
+                    <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
+                    <p>Máquinas de Visão e Inteligência Artificial</p>
+                    <ul class="list-inline mb-20">
+                      <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
+                    </ul>
+                    <ul class="social-links circle animated-effect-1 margin-clear">
+                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
+                      <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
+                      <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
+                    </ul>
+                    <div class="separator"></div>
+                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </footer>
-        <!-- footer end -->
-      </div>
-      <!-- page-wrapper end -->
-  
-      <!-- jquery and bootstap core js files -->
-      <script type="text/javascript" src="plugins/jquery.min.js"></script>
-      <script type="text/javascript" src="plugins/popper.min.js"></script>
-      <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-      <!-- Modernizr javascript -->
-      <script type="text/javascript" src="plugins/modernizr.js"></script>
-      <!-- jQuery Revolution Slider  -->
-      <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
-      <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
-      <!-- Isotope javascript -->
-      <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
-      <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
-      <!-- Appear javascript -->
-      <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
-      <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
-      <!-- Owl carousel javascript -->
-      <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
-      <!-- Pace javascript -->
-      <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
-      <!-- Initialization of Plugins -->
-      <script type="text/javascript" src="js/template.js"></script>
-      <!-- Google Maps javascript -->
-      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
-      <script type="text/javascript" src="js/google.map.config.js"></script>
-  
-    </body>
-  </html>
-  
+        </div>
+      </footer>
+      <!-- footer end -->
+    </div>
+    <!-- page-wrapper end -->
+
+    <!-- jquery and bootstap core js files -->
+    <script type="text/javascript" src="plugins/jquery.min.js"></script>
+    <script type="text/javascript" src="plugins/popper.min.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <!-- Modernizr javascript -->
+    <script type="text/javascript" src="plugins/modernizr.js"></script>
+    <!-- jQuery Revolution Slider  -->
+    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
+    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
+    <!-- Isotope javascript -->
+    <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
+    <!-- Appear javascript -->
+    <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
+    <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
+    <!-- Owl carousel javascript -->
+    <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
+    <!-- Pace javascript -->
+    <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
+    <!-- Initialization of Plugins -->
+    <script type="text/javascript" src="js/template.js"></script>
+    <!-- Google Maps javascript -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
+    <script type="text/javascript" src="js/google.map.config.js"></script>
+
+  </body>
+</html>
