--- a/template/page-about.html
+++ b/template/page-about.html
@@ -201,7 +201,7 @@
 
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg" style="background-image:url('images/page-about-banner.png'); background-position: 50% 27%;">
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-about-banner.jpg'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
@@ -230,7 +230,7 @@
                 <div class="special-container">
                   <div class="owl-carousel content-slider-with-controls">
                     <div class="overlay-container-2 overlay-visible rounded">
-                      <img class="rounded" src="images/page-about-1.png" alt="Image page about slider 1">
+                      <img class="rounded" src="images/page-about-1.jpg" alt="Image page about slider 1">
                     </div>
                     <div class="overlay-container-2 overlay-visible rounded">
                       <img class="rounded" src="images/page-about-2.png" alt="Image page about slider 2">
@@ -359,7 +359,7 @@
               <div class="col-md-6 col-lg-3 mb-20">
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container top-bordered">
-                    <img src="images/team-member-1.png" alt="Fernando Lopes">
+                    <img src="images/team-member-1.jpg" alt="Fernando Lopes">
                     <div class="overlay-bottom-2">
                       <ul class="small">
                         <li class="mt-10 text-left"><i class="fa fa-check"></i> Projeto de sistema de transmissão equipe Poli Racing de Fórmula SAE</li>
@@ -385,7 +385,7 @@
               <div class="col-md-6 col-lg-3 mb-20">
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container top-bordered">
-                    <img src="images/team-member-2.png" alt="Fernando Velloso">
+                    <img src="images/team-member-2.jpg" alt="Fernando Velloso">
                     <div class="overlay-bottom-2">
                       <ul class="small">
                         <li class="mt-10 text-left"><i class="fa fa-check"></i> Atuação na área de vendas na Aiesec-USP</li>
@@ -411,7 +411,7 @@
               <div class="col-md-6 col-lg-3 mb-20">
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container top-bordered">
-                    <img src="images/team-member-3.png" alt="Henrique Oliveira">
+                    <img src="images/team-member-3.jpg" alt="Henrique Oliveira">
                     <div class="overlay-bottom-2">
                       <ul class="small">
                         <li class="mt-10 text-left"><i class="fa fa-check"></i> Colaboração em projeto de máquina secadora de café de baixo custo</li>
@@ -435,7 +435,7 @@
               <div class="col-md-6 col-lg-3 mb-20">
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container top-bordered">
-                    <img src="images/team-member-4.png" alt="Henrique Oliveira">
+                    <img src="images/team-member-4.jpg" alt="Felipe Hernandez">
                     <div class="overlay-bottom-2">
                       <ul class="small">
                         <li class="mt-10 text-left"><i class="fa fa-check"></i> Algoritmos de Machine Learning (Accenture)</li>
@@ -460,7 +460,7 @@
               <div class="col-md-6 col-lg-3 mb-20">
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container top-bordered">
-                    <img src="images/team-member-5.png" alt="Henrique Oliveira">
+                    <img src="images/team-member-5.jpg" alt="Henrique Oliveira">
                     <div class="overlay-bottom-2">
                       <ul class="small">
                         <li class="mt-10 text-left"><i class="fa fa-check"></i> Desenvolvimento e gerenciamento de softwares de I.A. e visão computacional</li>
@@ -484,7 +484,7 @@
               <div class="col-md-6 col-lg-3 mb-20">
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container top-bordered">
-                    <img src="images/team-member-6.png" alt="Henrique Oliveira">
+                    <img src="images/team-member-6.jpg" alt="Henrique Oliveira">
                     <div class="overlay-bottom-2">
                       <ul class="small">
                         <li class="mt-10 text-left"><i class="fa fa-check"></i> Graduando em engenharia elétrica com ênfase em sistemas eletrônicos pela POLI-USP</li>
@@ -508,7 +508,7 @@
               <div class="col-md-6 col-lg-3 mb-20">
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container top-bordered">
-                    <img src="images/team-member-7.png" alt="Henrique Oliveira">
+                    <img src="images/team-member-7.jpg" alt="Henrique Oliveira">
                     <div class="overlay-bottom-2">
                       <ul class="small">
                         <li class="mt-10 text-left"><i class="fa fa-check"></i> Graduando em Mecatrônica no SENAI</li>
@@ -538,63 +538,62 @@
 
       <!-- footer start -->
       <footer id="footer" class="clearfix dark">
-          <div class="footer">
-            <div class="container">
-              <div class="footer-inner">
-                <div class="row justify-content-lg-center">
-                  <div class="col-lg-9">
-                    <div class="footer-content text-center padding-ver-clear">
-                      <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
-                      <p>Máquinas de Visão e Inteligência Artificial</p>
-                      <ul class="list-inline mb-20">
-                        <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
-                      </ul>
-                      <ul class="social-links circle animated-effect-1 margin-clear">
-                        <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
-                        <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
-                        <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
-                      </ul>
-                      <div class="separator"></div>
-                      <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
-                    </div>
+        <div class="footer">
+          <div class="container">
+            <div class="footer-inner">
+              <div class="row justify-content-lg-center">
+                <div class="col-lg-9">
+                  <div class="footer-content text-center padding-ver-clear">
+                    <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
+                    <p>Máquinas de Visão e Inteligência Artificial</p>
+                    <ul class="list-inline mb-20">
+                      <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
+                    </ul>
+                    <ul class="social-links circle animated-effect-1 margin-clear">
+                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
+                      <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
+                      <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
+                    </ul>
+                    <div class="separator"></div>
+                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </footer>
-        <!-- footer end -->
-      </div>
-      <!-- page-wrapper end -->
-  
-      <!-- jquery and bootstap core js files -->
-      <script type="text/javascript" src="plugins/jquery.min.js"></script>
-      <script type="text/javascript" src="plugins/popper.min.js"></script>
-      <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-      <!-- Modernizr javascript -->
-      <script type="text/javascript" src="plugins/modernizr.js"></script>
-      <!-- jQuery Revolution Slider  -->
-      <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
-      <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
-      <!-- Isotope javascript -->
-      <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
-      <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
-      <!-- Appear javascript -->
-      <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
-      <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
-      <!-- Owl carousel javascript -->
-      <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
-      <!-- Pace javascript -->
-      <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
-      <!-- Initialization of Plugins -->
-      <script type="text/javascript" src="js/template.js"></script>
-      <!-- Google Maps javascript -->
-      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
-      <script type="text/javascript" src="js/google.map.config.js"></script>
-  
-    </body>
-  </html>
-  
+        </div>
+      </footer>
+      <!-- footer end -->
+    </div>
+    <!-- page-wrapper end -->
+
+    <!-- jquery and bootstap core js files -->
+    <script type="text/javascript" src="plugins/jquery.min.js"></script>
+    <script type="text/javascript" src="plugins/popper.min.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <!-- Modernizr javascript -->
+    <script type="text/javascript" src="plugins/modernizr.js"></script>
+    <!-- jQuery Revolution Slider  -->
+    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
+    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
+    <!-- Isotope javascript -->
+    <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
+    <!-- Appear javascript -->
+    <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
+    <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
+    <!-- Owl carousel javascript -->
+    <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
+    <!-- Pace javascript -->
+    <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
+    <!-- Initialization of Plugins -->
+    <script type="text/javascript" src="js/template.js"></script>
+    <!-- Google Maps javascript -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
+    <script type="text/javascript" src="js/google.map.config.js"></script>
+
+  </body>
+</html>
