--- a/template/page-case-seletora-mudas-flores.html
+++ b/template/page-case-seletora-mudas-flores.html
@@ -201,7 +201,7 @@
 
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg" style="background-image:url('images/page-case-2-banner.png'); background-position: 50% 27%;">
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-case-2-banner.jpg'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
@@ -230,13 +230,13 @@
                 <div class="special-container">
                   <div class="owl-carousel content-slider-with-controls">
                     <div class="overlay-container overlay-visible rounded">
-                      <img src="images/page-case-2-1.png" alt="flores-1">
+                      <img src="images/page-case-2-1.jpg" alt="flores-1">
                     </div>
-                    <div class="overlay-container overlay-visible">
+                    <div class="overlay-container overlay-visible rounded">
                       <img src="images/page-case-2-2.png" alt="flores-2">
                     </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-2-3.png" alt="flores-3">
+                    <div class="overlay-container overlay-visible rounded">
+                      <img src="images/page-case-2-3.jpg" alt="flores-3">
                     </div>
                   </div>
                 </div>
@@ -310,7 +310,7 @@
           <div class="row">      
             <div class="col-md-4 mb-30">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-3.svg"></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-3.svg"></span>
                 <div class="body">
                   <h4 class="title">Padronização da Produção</h4>
                   <p>Plante lotes padronizados, assim sua produção cresce de maneira uniforme e homogênea. Isso reduz trabalho nas etapas de desenvolvimento da planta, otimiza o espaço da estufa e o uso de insumos.</p>
@@ -319,7 +319,7 @@
             </div>
             <div class="col-md-4 mb-30">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-1.svg"></span>
                 <div class="body">
                   <h4 class="title">Redução de mão-de-obra</h4>
                   <p>Elimina a necessidade de seleção manual das mudas, permitindo que seus funcionários sejam realocados em outras fases da produção. Além disso, a seleção da máquina é feita com maior precisão e consistência.</p>
@@ -328,7 +328,7 @@
             </div>
             <div class="col-md-4 mb-30">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-2.svg"></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-2.svg"></span>
                 <div class="body">
                   <h4 class="title">Aumento de produtividade</h4>
                   <p>Análises feitas com os clientes que estão usando a máquina apontam um ganho em 35% no processo de seleção de mudas (em comparação com o processo manual), e um aumento de 20% na produtividade total.</p>
@@ -337,7 +337,7 @@
             </div>
             <div class="col-md-4 mb-30">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-4.svg"></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-4.svg"></span>
                 <div class="body">
                   <h4 class="title">Relatórios detalhados</h4>
                   <p>A Máquina Seletora de Mudas oferece um maior controle da sua produção, produzindo relatórios com a contagem de mudas por dia, semana, mês, etc. e por funcionário. Isso auxilia no planejamento e na melhoria de seu negócio, dando também a opção de estabelecer metas para um grupo e bonificações para funcionários com melhores aproveitamentos.</p>
@@ -346,7 +346,7 @@
             </div>
             <div class="col-md-4 mb-30">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-6.svg"></span>
                 <div class="body">
                   <h3 class="title">Assistência técnica</h3>
                   <p>A MVisia é uma empresa 100% brasileira. Além de ser um produto sem altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, de forma presencial ou remota. Respondemos com agilidade às chamadas abertas.</p>
@@ -395,63 +395,62 @@
 
       <!-- footer start -->
       <footer id="footer" class="clearfix dark">
-          <div class="footer">
-            <div class="container">
-              <div class="footer-inner">
-                <div class="row justify-content-lg-center">
-                  <div class="col-lg-9">
-                    <div class="footer-content text-center padding-ver-clear">
-                      <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
-                      <p>Máquinas de Visão e Inteligência Artificial</p>
-                      <ul class="list-inline mb-20">
-                        <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
-                      </ul>
-                      <ul class="social-links circle animated-effect-1 margin-clear">
-                        <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
-                        <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
-                        <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
-                      </ul>
-                      <div class="separator"></div>
-                      <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
-                    </div>
+        <div class="footer">
+          <div class="container">
+            <div class="footer-inner">
+              <div class="row justify-content-lg-center">
+                <div class="col-lg-9">
+                  <div class="footer-content text-center padding-ver-clear">
+                    <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
+                    <p>Máquinas de Visão e Inteligência Artificial</p>
+                    <ul class="list-inline mb-20">
+                      <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
+                    </ul>
+                    <ul class="social-links circle animated-effect-1 margin-clear">
+                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
+                      <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
+                      <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
+                    </ul>
+                    <div class="separator"></div>
+                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </footer>
-        <!-- footer end -->
-      </div>
-      <!-- page-wrapper end -->
-  
-      <!-- jquery and bootstap core js files -->
-      <script type="text/javascript" src="plugins/jquery.min.js"></script>
-      <script type="text/javascript" src="plugins/popper.min.js"></script>
-      <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-      <!-- Modernizr javascript -->
-      <script type="text/javascript" src="plugins/modernizr.js"></script>
-      <!-- jQuery Revolution Slider  -->
-      <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
-      <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
-      <!-- Isotope javascript -->
-      <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
-      <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
-      <!-- Appear javascript -->
-      <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
-      <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
-      <!-- Owl carousel javascript -->
-      <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
-      <!-- Pace javascript -->
-      <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
-      <!-- Initialization of Plugins -->
-      <script type="text/javascript" src="js/template.js"></script>
-      <!-- Google Maps javascript -->
-      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
-      <script type="text/javascript" src="js/google.map.config.js"></script>
-  
-    </body>
-  </html>
-  
+        </div>
+      </footer>
+      <!-- footer end -->
+    </div>
+    <!-- page-wrapper end -->
+
+    <!-- jquery and bootstap core js files -->
+    <script type="text/javascript" src="plugins/jquery.min.js"></script>
+    <script type="text/javascript" src="plugins/popper.min.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <!-- Modernizr javascript -->
+    <script type="text/javascript" src="plugins/modernizr.js"></script>
+    <!-- jQuery Revolution Slider  -->
+    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
+    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
+    <!-- Isotope javascript -->
+    <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
+    <!-- Appear javascript -->
+    <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
+    <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
+    <!-- Owl carousel javascript -->
+    <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
+    <!-- Pace javascript -->
+    <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
+    <!-- Initialization of Plugins -->
+    <script type="text/javascript" src="js/template.js"></script>
+    <!-- Google Maps javascript -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
+    <script type="text/javascript" src="js/google.map.config.js"></script>
+
+  </body>
+</html>
