--- a/template/page-case-sistema-qualificacao-uvas.html
+++ b/template/page-case-sistema-qualificacao-uvas.html
@@ -201,7 +201,7 @@
 
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg" style="background-image:url('images/page-case-3-banner.png'); background-position: 50% 27%;">
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-case-3-banner.jpg'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
@@ -229,13 +229,13 @@
                 <div class="special-container">
                   <div class="owl-carousel content-slider-with-controls">
                     <div class="overlay-container overlay-visible rounded">
-                      <img src="images/page-case-3-1.png" alt="uvas-1">
+                      <img src="images/page-case-3-1.jpg" alt="uvas-1">
                     </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-3-2.png" alt="uvas-2">
+                    <div class="overlay-container overlay-visible rounded">
+                      <img src="images/page-case-3-2.jpg" alt="uvas-2">
                     </div>
-                    <div class="overlay-container overlay-visible">
-                      <img src="images/page-case-3-3.png" alt="uvas-3">
+                    <div class="overlay-container overlay-visible rounded">
+                      <img src="images/page-case-3-3.jpg" alt="uvas-3">
                     </div>
                   </div>
                 </div>
@@ -309,7 +309,7 @@
           <div class="row">      
             <div class="col-md-4 mb-30">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-3.svg"></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-3.svg"></span>
                 <div class="body">
                   <h4 class="title">Ensaio não destrutivo</h4>
                   <p>Texto descritivo??</p>
@@ -318,7 +318,7 @@
             </div>
             <div class="col-md-4 mb-30">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-1.svg"></span>
                 <div class="body">
                   <h4 class="title">Análise de todos os produtos</h4>
                   <p>Texto descritivo??</p>
@@ -327,7 +327,7 @@
             </div>
             <div class="col-md-4 mb-30">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-2.svg"></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-2.svg"></span>
                 <div class="body">
                   <h4 class="title">Processo automatizado</h4>
                   <p>Texto descritivo??</p>
@@ -336,7 +336,7 @@
             </div>
             <div class="col-md-4 mb-30">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-4.svg"></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-4.svg"></span>
                 <div class="body">
                   <h4 class="title">Análise em tempo real</h4>
                   <p>Texto descritivo??</p>
@@ -345,7 +345,7 @@
             </div>
             <div class="col-md-4 mb-30">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle-benefits" src="images/icon-benefit-6.svg"></span>
                 <div class="body">
                   <h3 class="title">Assistência técnica</h3>
                   <p>A MVisia é uma empresa 100% brasileira. Além de ser um produto sem altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, de forma presencial ou remota. Respondemos com agilidade às chamadas abertas.</p>
@@ -390,65 +390,64 @@
     </div>
     <!-- page-wrapper end -->
 
-      <!-- footer start -->
-      <footer id="footer" class="clearfix dark">
-          <div class="footer">
-            <div class="container">
-              <div class="footer-inner">
-                <div class="row justify-content-lg-center">
-                  <div class="col-lg-9">
-                    <div class="footer-content text-center padding-ver-clear">
-                      <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
-                      <p>Máquinas de Visão e Inteligência Artificial</p>
-                      <ul class="list-inline mb-20">
-                        <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
-                      </ul>
-                      <ul class="social-links circle animated-effect-1 margin-clear">
-                        <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
-                        <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
-                        <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
-                      </ul>
-                      <div class="separator"></div>
-                      <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
-                    </div>
+       <!-- footer start -->
+       <footer id="footer" class="clearfix dark">
+        <div class="footer">
+          <div class="container">
+            <div class="footer-inner">
+              <div class="row justify-content-lg-center">
+                <div class="col-lg-9">
+                  <div class="footer-content text-center padding-ver-clear">
+                    <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
+                    <p>Máquinas de Visão e Inteligência Artificial</p>
+                    <ul class="list-inline mb-20">
+                      <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
+                    </ul>
+                    <ul class="social-links circle animated-effect-1 margin-clear">
+                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
+                      <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
+                      <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
+                    </ul>
+                    <div class="separator"></div>
+                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </footer>
-        <!-- footer end -->
-      </div>
-      <!-- page-wrapper end -->
-  
-      <!-- jquery and bootstap core js files -->
-      <script type="text/javascript" src="plugins/jquery.min.js"></script>
-      <script type="text/javascript" src="plugins/popper.min.js"></script>
-      <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-      <!-- Modernizr javascript -->
-      <script type="text/javascript" src="plugins/modernizr.js"></script>
-      <!-- jQuery Revolution Slider  -->
-      <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
-      <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
-      <!-- Isotope javascript -->
-      <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
-      <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
-      <!-- Appear javascript -->
-      <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
-      <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
-      <!-- Owl carousel javascript -->
-      <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
-      <!-- Pace javascript -->
-      <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
-      <!-- Initialization of Plugins -->
-      <script type="text/javascript" src="js/template.js"></script>
-      <!-- Google Maps javascript -->
-      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
-      <script type="text/javascript" src="js/google.map.config.js"></script>
-  
-    </body>
-  </html>
-  
+        </div>
+      </footer>
+      <!-- footer end -->
+    </div>
+    <!-- page-wrapper end -->
+
+    <!-- jquery and bootstap core js files -->
+    <script type="text/javascript" src="plugins/jquery.min.js"></script>
+    <script type="text/javascript" src="plugins/popper.min.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <!-- Modernizr javascript -->
+    <script type="text/javascript" src="plugins/modernizr.js"></script>
+    <!-- jQuery Revolution Slider  -->
+    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
+    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
+    <!-- Isotope javascript -->
+    <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
+    <!-- Appear javascript -->
+    <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
+    <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
+    <!-- Owl carousel javascript -->
+    <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
+    <!-- Pace javascript -->
+    <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
+    <!-- Initialization of Plugins -->
+    <script type="text/javascript" src="js/template.js"></script>
+    <!-- Google Maps javascript -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
+    <script type="text/javascript" src="js/google.map.config.js"></script>
+
+  </body>
+</html>
