--- a/template/page-media.html
+++ b/template/page-media.html
@@ -201,7 +201,7 @@
 
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg" style="background-image:url('images/page-media-banner.png'); background-position: 50% 27%;">
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-media-banner.jpg'); background-position: 50% 27%;">
         <div class="container">
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
@@ -227,7 +227,7 @@
                   <a target="_blank" href="https://viewer.aemmobile.adobe.com/index.html#project/69eb211c-a1d3-4b60-a011-6bc2e481431f/view/edicao_380_junho_2017/article/globorural_-dj-de43b365-d42c-49f1-87e2-90d56ec4419d">
                     <div class="image-box shadow-2 text-center mb-20">
                       <div class="overlay-container">
-                        <img src="images/media-1.png" alt="logo-globo-rural">
+                        <img src="images/media-1.jpg" alt="logo-globo-rural">
                         <div class="overlay-top">
                           <div class="text">
                             <h5 class="text-white title">Limpeza eficiente, sem água</h5>
@@ -688,63 +688,62 @@
 
       <!-- footer start -->
       <footer id="footer" class="clearfix dark">
-          <div class="footer">
-            <div class="container">
-              <div class="footer-inner">
-                <div class="row justify-content-lg-center">
-                  <div class="col-lg-9">
-                    <div class="footer-content text-center padding-ver-clear">
-                      <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
-                      <p>Máquinas de Visão e Inteligência Artificial</p>
-                      <ul class="list-inline mb-20">
-                        <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
-                        <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
-                      </ul>
-                      <ul class="social-links circle animated-effect-1 margin-clear">
-                        <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
-                        <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
-                        <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
-                      </ul>
-                      <div class="separator"></div>
-                      <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
-                    </div>
+        <div class="footer">
+          <div class="container">
+            <div class="footer-inner">
+              <div class="row justify-content-lg-center">
+                <div class="col-lg-9">
+                  <div class="footer-content text-center padding-ver-clear">
+                    <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
+                    <p>Máquinas de Visão e Inteligência Artificial</p>
+                    <ul class="list-inline mb-20">
+                      <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
+                      <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
+                    </ul>
+                    <ul class="social-links circle animated-effect-1 margin-clear">
+                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
+                      <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
+                      <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
+                    </ul>
+                    <div class="separator"></div>
+                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </footer>
-        <!-- footer end -->
-      </div>
-      <!-- page-wrapper end -->
-  
-      <!-- jquery and bootstap core js files -->
-      <script type="text/javascript" src="plugins/jquery.min.js"></script>
-      <script type="text/javascript" src="plugins/popper.min.js"></script>
-      <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-      <!-- Modernizr javascript -->
-      <script type="text/javascript" src="plugins/modernizr.js"></script>
-      <!-- jQuery Revolution Slider  -->
-      <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
-      <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
-      <!-- Isotope javascript -->
-      <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
-      <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
-      <!-- Appear javascript -->
-      <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
-      <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
-      <!-- Owl carousel javascript -->
-      <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
-      <!-- Pace javascript -->
-      <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
-      <!-- Initialization of Plugins -->
-      <script type="text/javascript" src="js/template.js"></script>
-      <!-- Google Maps javascript -->
-      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
-      <script type="text/javascript" src="js/google.map.config.js"></script>
-  
-    </body>
-  </html>
-  
+        </div>
+      </footer>
+      <!-- footer end -->
+    </div>
+    <!-- page-wrapper end -->
+
+    <!-- jquery and bootstap core js files -->
+    <script type="text/javascript" src="plugins/jquery.min.js"></script>
+    <script type="text/javascript" src="plugins/popper.min.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <!-- Modernizr javascript -->
+    <script type="text/javascript" src="plugins/modernizr.js"></script>
+    <!-- jQuery Revolution Slider  -->
+    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
+    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
+    <!-- Isotope javascript -->
+    <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
+    <!-- Appear javascript -->
+    <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
+    <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
+    <!-- Owl carousel javascript -->
+    <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
+    <!-- Pace javascript -->
+    <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
+    <!-- Initialization of Plugins -->
+    <script type="text/javascript" src="js/template.js"></script>
+    <!-- Google Maps javascript -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
+    <script type="text/javascript" src="js/google.map.config.js"></script>
+
+  </body>
+</html>
