page about adjusts

--- a/template/index.html
+++ b/template/index.html
@@ -505,9 +505,9 @@
                   <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                     <div class="overlay-container border-clear">
                       <img class="img-container" src="images/case-1.jpg" alt="calibradora">
-                      <div class="overlay-to-top">
+                      <!--<div class="overlay-to-top">
                         <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
-                      </div>
+                      </div>-->
                     </div>
                     <div class="body">
                       <h3 class="card-title text-white">Tomate</h3>
@@ -522,9 +522,9 @@
                   <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="200">
                     <div class="overlay-container border-clear">
                       <img class="img-container" src="images/case-2.jpg" alt="qualificacao-uvas">
-                      <div class="overlay-to-top">
+                      <!--<div class="overlay-to-top">
                         <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
-                      </div>
+                      </div>-->
                     </div>
                     <div class="body">
                       <h3 class="card-title text-white">Uva</h3>
@@ -539,9 +539,9 @@
                   <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="300">
                     <div class="overlay-container border-clear">
                         <img class="img-container" src="images/case-3.jpg" alt="seletora-eucalipto">
-                      <div class="overlay-to-top">
+                      <!--<div class="overlay-to-top">
                         <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
-                      </div>
+                      </div>-->
                     </div>
                     <div class="body">
                       <h3 class="card-title text-white">Eucalipto</h3>
@@ -556,9 +556,9 @@
                   <div class="image-box style-2 mb-20 bordered dark-bg text-center" data-animation-effect="fadeInDownSmall" data-effect-delay="400">
                     <div class="overlay-container border-clear">
                         <img class="img-container" src="images/case-4.jpg" alt="seletora-flores">
-                      <div class="overlay-to-top">
+                      <!--<div class="overlay-to-top">
                         <p class="small margin-clear">Velocidade de 3600 mudas por hora</p>
-                      </div>
+                      </div>-->
                     </div>
                     <div class="body">
                       <h3 class="card-title text-white">Flores</h3>
@@ -823,7 +823,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="call-to-action">
-                  <div class="row">
+                  <div class="row mb-10">
                     <div class="col-md-4">
                       <div class="feature-box-2 object-non-visible mb-20 mt-30" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                         <span class="icon default-bg icon-small circle"><img class="icon-circle" src="images/icon-benefit-7.svg"></span>
