--- a/template/page-about.html
+++ b/template/page-about.html
@@ -270,9 +270,9 @@
                   <div class="body">
                     <h4 class="title">Machine Learning</h4>
                     <ul class="expertises">
-                      <li><i class="icon-right-open"></i>Supervised Machine Learning (SVMs, Cross Validation);</li>
-                      <li><i class="icon-right-open"></i>Unsupervised Machine Learning (K-Means, DBSCAN, PCA);</li>
-                      <li><i class="icon-right-open"></i>Deep Learning (CNNs, LSTMs);</li>
+                      <li><i class="fa fa-angle-right icon-angle-green"></i>Supervised Machine Learning (SVMs, Cross Validation);</li>
+                      <li><i class="fa fa-angle-right icon-angle-green"></i>Unsupervised Machine Learning (K-Means, DBSCAN, PCA);</li>
+                      <li><i class="fa fa-angle-right icon-angle-green"></i>Deep Learning (CNNs, LSTMs);</li>
                     </ul>
                   </div>
                 </div>
@@ -284,10 +284,10 @@
                   <div class="body">
                     <h4 class="title">Computer Vision</h4>
                     <ul class="expertises">
-                      <li><i class="icon-right-open"></i>Image Processing, Image Filtering, Image Segmentation;</li>
-                      <li><i class="icon-right-open"></i>Image Feature Detection, Image Classification;</li>
-                      <li><i class="icon-right-open"></i>Camera Control Algorithms (AWB, AEC, AF);</li>
-                      <li><i class="icon-right-open"></i>3D Stereo Camera Calibration and Reconstruction;</li>
+                      <li><i class="fa fa-angle-right icon-angle-green"></i>Image Processing, Image Filtering, Image Segmentation;</li>
+                      <li><i class="fa fa-angle-right icon-angle-green"></i>Image Feature Detection, Image Classification;</li>
+                      <li><i class="fa fa-angle-right icon-angle-green"></i>Camera Control Algorithms (AWB, AEC, AF);</li>
+                      <li><i class="fa fa-angle-right icon-angle-green"></i>3D Stereo Camera Calibration and Reconstruction;</li>
                     </ul>
                   </div>
                 </div>
@@ -462,7 +462,7 @@
                     <h5 class="mt-20">Sistemas de Visão Computacional</h5>
                     <div class="separator mt-10 separator-custom"></div>
                     <ul class="social-links circle colored margin-clear">
-                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/henrique-oliveira-martins-815a31130/"><i class="fa fa-linkedin"></i></a></li>
+                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/felipe-bueno-hernandez-b4721348/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -486,7 +486,7 @@
                     <h5 class="mt-20">Gerenciamento de Softwares</h5>
                     <div class="separator mt-10 separator-custom"></div>
                     <ul class="social-links circle colored margin-clear">
-                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/henrique-oliveira-martins-815a31130/"><i class="fa fa-linkedin"></i></a></li>
+                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/cassiano-kleinert-casagrande-094196a8/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -510,7 +510,7 @@
                     <h5 class="mt-20">Algoritmos Machine Learning</h5>
                     <div class="separator mt-10 separator-custom"></div>
                     <ul class="social-links circle colored margin-clear">
-                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/henrique-oliveira-martins-815a31130/"><i class="fa fa-linkedin"></i></a></li>
+                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/lucas-ribeiro-ferreira-julio-b65709149/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
