--- a/template/css/custom.css
+++ b/template/css/custom.css
@@ -25,6 +25,14 @@
     color: white;
 }
 
+.icon-angle-green {
+    font-size: 22px;
+    font-weight: bold;
+    color: #007f3e;
+    margin-right: 10px;
+    margin-top: 2px;
+}
+
 
 /* Wrappers
 ---------------------------------- */
